seccion sidebar y temas

--- a/src/app/components/incrementador/incrementador.component.html
+++ b/src/app/components/incrementador/incrementador.component.html
@@ -1,12 +1,19 @@
-<h3>{{leyenda}}</h3>
-<div class="input-group mb-3">
-  <div class="input-group-prepend">
-    <button class="btn btn-outline-secondary" type="button" (click)="incrementar(+5)">
-      <i class="mdi mdi-plus"></i>
+<h3>
+    {{ leyenda }} - {{ progreso }}
+</h3>
+
+<div class="input-group">
+    <span class="input-group-btn">
+    <button class="btn btn-primary" type="button" (click)="cambiarValor(-5)">
+        <i class="mdi mdi-minus"></i>
     </button>
-  </div>
-  <input name="progreso" type="number" class="form-control" [(ngModel)]="progreso" min="0" max="100" >
-  <button class="btn btn-outline-secondary" type="button" (click)="incrementar(-5)">
-    <i class="mdi mdi-minus"></i>
-  </button>
+  </span>
+
+    <input #txtProgress type="number" class="form-control" name="progreso" [(ngModel)]="progreso" (ngModelChange)="onChanges($event)" min="1" max="100">
+
+    <span class="input-group-btn">
+      <button class="btn btn-primary" type="button" (click)="cambiarValor(+5)">
+          <i class="mdi mdi-plus"></i>
+      </button>
+    </span>
 </div>
