--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -20,7 +20,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <app-incrementador (cambiovalor)="progreso1=$event" leyenda="progress azul" [progreso]="progreso1"></app-incrementador>
+                <app-incrementador (actualizaValor)="progreso1=$event" leyenda="progress azul" [progreso]="progreso1"></app-incrementador>
 
             </div>
         </div>
@@ -28,7 +28,7 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-              <app-incrementador (cambiovalor)="progreso2=$event" leyenda="progress verde" [progreso]="progreso2" ></app-incrementador>
+              <app-incrementador (actualizaValor)="progreso2=$event" leyenda="progress verde" [progreso]="progreso2" ></app-incrementador>
             </div>
         </div>
     </div>
